updated summary statistics

--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4bd2dc3d-98f9-4c62-861e-e278f6d1e37a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ============================================================\n",
     "# Notebook setup: run this before everything\n",
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6c34bde8-3c01-4ba7-98fd-6beee5075916",
    "metadata": {},
    "outputs": [
@@ -240,7 +231,7 @@
        "4       0.000099       0.000104       0.000203        16  ANTICIPATE  leonardo  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "383e6b36-da74-49f1-92d0-190cb190f08c",
    "metadata": {},
    "outputs": [
@@ -291,51 +282,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         sol(keuro)     time(sec)    memAvg(MB)   memPeak(MB)      CO2e(kg)  \\\n",
+      "            pv_mean        pv_std     load_mean      load_std    sol(keuro)  \\\n",
       "count  11900.000000  11900.000000  11900.000000  11900.000000  11900.000000   \n",
-      "mean     353.151242    138.560767    147.719032    177.013474      0.000690   \n",
-      "std       75.824490    165.598068     32.952518     48.409524      0.001154   \n",
-      "min      233.130000      1.220000     79.260000     83.110000      0.000001   \n",
-      "25%      309.870000     42.030000    130.050000    145.090000      0.000014   \n",
-      "50%      341.340000     83.860000    143.020000    161.780000      0.000209   \n",
-      "75%      367.090000    143.852500    152.512500    201.647500      0.000535   \n",
-      "max      813.710000    814.140000    278.680000    323.660000      0.020901   \n",
+      "mean     269.264837    277.453998    317.214181    166.427673    353.151242   \n",
+      "std       10.956221     11.331598     12.866123      7.290310     75.824490   \n",
+      "min      246.585417    254.152197    291.043750    150.043095    233.130000   \n",
+      "25%      264.814583    272.939977    311.839583    162.922268    309.870000   \n",
+      "50%      268.027083    276.661763    316.348958    166.359854    341.340000   \n",
+      "75%      273.432292    281.780059    322.672917    169.575057    367.090000   \n",
+      "max      295.090625    304.773592    346.844792    185.276198    813.710000   \n",
       "\n",
-      "       CO2eRate(kg/s)  cpuEnergy(kW)  ramEnergy(kW)  totEnergy(kW)  \n",
-      "count    11900.000000   11900.000000   1.190000e+04   11900.000000  \n",
-      "mean         0.000020       0.001042   9.832971e-04       0.002025  \n",
-      "std          0.000016       0.001527   1.901373e-03       0.003386  \n",
-      "min          0.000004       0.000003   2.244141e-07       0.000003  \n",
-      "25%          0.000004       0.000037   2.633792e-06       0.000040  \n",
-      "50%          0.000004       0.000379   1.018522e-04       0.000612  \n",
-      "75%          0.000037       0.001302   3.926005e-04       0.001570  \n",
-      "max          0.000043       0.026895   3.443585e-02       0.061331  \n",
+      "          time(sec)    memAvg(MB)   memPeak(MB)      CO2e(kg)  CO2eRate(kg/s)  \\\n",
+      "count  11900.000000  11900.000000  11900.000000  11900.000000    11900.000000   \n",
+      "mean     138.560767    147.719032    177.013474      0.000690        0.000020   \n",
+      "std      165.598068     32.952518     48.409524      0.001154        0.000016   \n",
+      "min        1.220000     79.260000     83.110000      0.000001        0.000004   \n",
+      "25%       42.030000    130.050000    145.090000      0.000014        0.000004   \n",
+      "50%       83.860000    143.020000    161.780000      0.000209        0.000004   \n",
+      "75%      143.852500    152.512500    201.647500      0.000535        0.000037   \n",
+      "max      814.140000    278.680000    323.660000      0.020901        0.000043   \n",
+      "\n",
+      "       cpuEnergy(kW)  ramEnergy(kW)  totEnergy(kW)  \n",
+      "count   11900.000000   1.190000e+04   11900.000000  \n",
+      "mean        0.001042   9.832971e-04       0.002025  \n",
+      "std         0.001527   1.901373e-03       0.003386  \n",
+      "min         0.000003   2.244141e-07       0.000003  \n",
+      "25%         0.000037   2.633792e-06       0.000040  \n",
+      "50%         0.000379   1.018522e-04       0.000612  \n",
+      "75%         0.001302   3.926005e-04       0.001570  \n",
+      "max         0.026895   3.443585e-02       0.061331  \n",
       "==================================================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 11900 entries, 0 to 11899\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 15 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   sol(keuro)      11900 non-null  float64\n",
-      " 1   time(sec)       11900 non-null  float64\n",
-      " 2   memAvg(MB)      11900 non-null  float64\n",
-      " 3   memPeak(MB)     11900 non-null  float64\n",
-      " 4   CO2e(kg)        11900 non-null  float64\n",
-      " 5   CO2eRate(kg/s)  11900 non-null  float64\n",
-      " 6   cpuEnergy(kW)   11900 non-null  float64\n",
-      " 7   ramEnergy(kW)   11900 non-null  float64\n",
-      " 8   totEnergy(kW)   11900 non-null  float64\n",
-      " 9   algorithm       11900 non-null  object \n",
-      " 10  platform        11900 non-null  object \n",
-      "dtypes: float64(9), object(2)\n",
-      "memory usage: 1022.8+ KB\n",
+      " 0   pv_mean         11900 non-null  float64\n",
+      " 1   pv_std          11900 non-null  float64\n",
+      " 2   load_mean       11900 non-null  float64\n",
+      " 3   load_std        11900 non-null  float64\n",
+      " 4   sol(keuro)      11900 non-null  float64\n",
+      " 5   time(sec)       11900 non-null  float64\n",
+      " 6   memAvg(MB)      11900 non-null  float64\n",
+      " 7   memPeak(MB)     11900 non-null  float64\n",
+      " 8   CO2e(kg)        11900 non-null  float64\n",
+      " 9   CO2eRate(kg/s)  11900 non-null  float64\n",
+      " 10  cpuEnergy(kW)   11900 non-null  float64\n",
+      " 11  ramEnergy(kW)   11900 non-null  float64\n",
+      " 12  totEnergy(kW)   11900 non-null  float64\n",
+      " 13  algorithm       11900 non-null  object \n",
+      " 14  platform        11900 non-null  object \n",
+      "dtypes: float64(13), object(2)\n",
+      "memory usage: 1.4+ MB\n",
       "None\n"
      ]
     }
    ],
    "source": [
     "# Lets drop some of the columns\n",
-    "columns = ['parameter','pv_mean','pv_std','load_mean','load_std','cpuCount']\n",
+    "columns = ['parameter','cpuCount']\n",
     "df_overview = df.drop(columns=columns)\n",
     "\n",
     "print(df_overview.describe())\n",
@@ -734,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "291e38ac-03c9-4163-a5f1-6a8eb0a23370",
    "metadata": {},
    "outputs": [
@@ -894,7 +899,7 @@
        "4        BK  leonardo              NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "7b2c40bb-fffb-41fb-8689-7f28709db06f",
    "metadata": {},
    "outputs": [
@@ -946,61 +951,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            time(s)    memPeak(MB)    memAvg(MB)     CO2eq(kg)  \\\n",
-      "count  49760.000000   49760.000000  49760.000000  4.976000e+04   \n",
-      "mean       0.232135     159.419272    143.171791  8.219425e-06   \n",
-      "std        3.176720    1147.370794    867.280696  1.277790e-04   \n",
-      "min        0.000002       0.000000      0.000000  0.000000e+00   \n",
-      "25%        0.000025      84.710900     84.710900  4.398937e-07   \n",
-      "50%        0.000133      89.250000     89.250000  3.180670e-06   \n",
-      "75%        0.000205      89.347700     89.343800  3.370358e-06   \n",
-      "max      213.772000  120055.000000  81866.100000  9.342000e-03   \n",
+      "              nodes          arcs       time(s)    memPeak(MB)    memAvg(MB)  \\\n",
+      "count  4.976000e+04  4.976000e+04  49760.000000   49760.000000  49760.000000   \n",
+      "mean   1.354333e+05  1.396830e+06      0.232135     159.419272    143.171791   \n",
+      "std    3.783833e+06  2.734812e+07      3.176720    1147.370794    867.280696   \n",
+      "min    4.000000e+01  7.600000e+01      0.000002       0.000000      0.000000   \n",
+      "25%    8.000000e+01  2.460000e+02      0.000025      84.710900     84.710900   \n",
+      "50%    2.220000e+02  4.960000e+02      0.000133      89.250000     89.250000   \n",
+      "75%    1.118000e+03  2.236000e+03      0.000205      89.347700     89.343800   \n",
+      "max    6.885000e+08  4.673839e+09    213.772000  120055.000000  81866.100000   \n",
       "\n",
-      "       CO2eRate(kg/s)  cpuEnergy(kW)  ramEnergy(kW)  totEnergy(kW)  \\\n",
-      "count    46261.000000   4.976000e+04   4.976000e+04   4.976000e+04   \n",
-      "mean         0.000022   1.807412e-05   1.962716e-05   3.770128e-05   \n",
-      "std          0.000014   2.287604e-04   2.489278e-04   4.718855e-04   \n",
-      "min          0.000004   2.405412e-08   1.430025e-09   2.548414e-08   \n",
-      "25%          0.000004   1.209143e-06   8.183709e-08   1.290982e-06   \n",
-      "50%          0.000030   3.903920e-06   5.507885e-06   9.384386e-06   \n",
-      "75%          0.000032   4.657364e-06   5.527941e-06   1.010426e-05   \n",
-      "max          0.000043   1.455126e-02   1.351936e-02   2.741109e-02   \n",
+      "          CO2eq(kg)  CO2eRate(kg/s)  cpuEnergy(kW)  ramEnergy(kW)  \\\n",
+      "count  4.976000e+04    46261.000000   4.976000e+04   4.976000e+04   \n",
+      "mean   8.219425e-06        0.000022   1.807412e-05   1.962716e-05   \n",
+      "std    1.277790e-04        0.000014   2.287604e-04   2.489278e-04   \n",
+      "min    0.000000e+00        0.000004   2.405412e-08   1.430025e-09   \n",
+      "25%    4.398937e-07        0.000004   1.209143e-06   8.183709e-08   \n",
+      "50%    3.180670e-06        0.000030   3.903920e-06   5.507885e-06   \n",
+      "75%    3.370358e-06        0.000032   4.657364e-06   5.527941e-06   \n",
+      "max    9.342000e-03        0.000043   1.455126e-02   1.351936e-02   \n",
       "\n",
-      "       CO2eRate (kg/s)  \n",
-      "count     3.499000e+03  \n",
-      "mean      3.617949e-06  \n",
-      "std       5.159551e-06  \n",
-      "min       2.015740e-07  \n",
-      "25%       2.259515e-07  \n",
-      "50%       4.296012e-06  \n",
-      "75%       4.306405e-06  \n",
-      "max       3.831304e-05  \n",
+      "       totEnergy(kW)  CO2eRate (kg/s)  \n",
+      "count   4.976000e+04     3.499000e+03  \n",
+      "mean    3.770128e-05     3.617949e-06  \n",
+      "std     4.718855e-04     5.159551e-06  \n",
+      "min     2.548414e-08     2.015740e-07  \n",
+      "25%     1.290982e-06     2.259515e-07  \n",
+      "50%     9.384386e-06     4.296012e-06  \n",
+      "75%     1.010426e-05     4.306405e-06  \n",
+      "max     2.741109e-02     3.831304e-05  \n",
       "==================================================\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 49760 entries, 0 to 49759\n",
-      "Data columns (total 11 columns):\n",
+      "Data columns (total 13 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   time(s)          49760 non-null  float64\n",
-      " 1   memPeak(MB)      49760 non-null  float64\n",
-      " 2   memAvg(MB)       49760 non-null  float64\n",
-      " 3   CO2eq(kg)        49760 non-null  float64\n",
-      " 4   CO2eRate(kg/s)   46261 non-null  float64\n",
-      " 5   cpuEnergy(kW)    49760 non-null  float64\n",
-      " 6   ramEnergy(kW)    49760 non-null  float64\n",
-      " 7   totEnergy(kW)    49760 non-null  float64\n",
-      " 8   benchmark        49760 non-null  object \n",
-      " 9   platform         49760 non-null  object \n",
-      " 10  CO2eRate (kg/s)  3499 non-null   float64\n",
-      "dtypes: float64(9), object(2)\n",
-      "memory usage: 4.2+ MB\n",
+      " 0   nodes            49760 non-null  int64  \n",
+      " 1   arcs             49760 non-null  int64  \n",
+      " 2   time(s)          49760 non-null  float64\n",
+      " 3   memPeak(MB)      49760 non-null  float64\n",
+      " 4   memAvg(MB)       49760 non-null  float64\n",
+      " 5   CO2eq(kg)        49760 non-null  float64\n",
+      " 6   CO2eRate(kg/s)   46261 non-null  float64\n",
+      " 7   cpuEnergy(kW)    49760 non-null  float64\n",
+      " 8   ramEnergy(kW)    49760 non-null  float64\n",
+      " 9   totEnergy(kW)    49760 non-null  float64\n",
+      " 10  benchmark        49760 non-null  object \n",
+      " 11  platform         49760 non-null  object \n",
+      " 12  CO2eRate (kg/s)  3499 non-null   float64\n",
+      "dtypes: float64(9), int64(2), object(2)\n",
+      "memory usage: 4.9+ MB\n",
       "None\n"
      ]
     }
    ],
    "source": [
     "# Lets drop some of the columns\n",
-    "columns = ['implementation','nodes','arcs', 'cpuCount']\n",
+    "columns = ['implementation','cpuCount']\n",
     "df_min_cut_overview = df_min_cut.drop(columns=columns)\n",
     "\n",
     "print(df_min_cut_overview.describe())\n",
