added some TODOs

--- a/notebooks/data-analysis.ipynb
+++ b/notebooks/data-analysis.ipynb
@@ -537,12 +537,14 @@
    "source": [
     "### Energy and Emission Analysis\n",
     "\n",
-    "Explore the CO2 emissions `CO2e(kg)` and energy consumption metrics to compare environmental impact across algorithms and platforms"
+    "Explore the CO2 emissions `CO2e(kg)` and energy consumption metrics to compare environmental impact across algorithms and platforms\n",
+    "\n",
+    "**TODO:** Remove the outliers to better check the distribution of Emissions and Energy Consumptions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b82f4c80-d9f3-4fa6-86b9-f4cbce638436",
    "metadata": {},
    "outputs": [
@@ -751,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "291e38ac-03c9-4163-a5f1-6a8eb0a23370",
    "metadata": {},
    "outputs": [
@@ -911,7 +913,7 @@
        "4        BK  leonardo              NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "7b2c40bb-fffb-41fb-8689-7f28709db06f",
    "metadata": {},
    "outputs": [
@@ -1025,6 +1027,279 @@
     "print(df_min_cut_overview.describe())\n",
     "print(\"=\"*50)\n",
     "print(df_min_cut_overview.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "10cf4fda-8fbb-45c8-a858-3aab212393a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">nodes</th>\n",
+       "      <th colspan=\"8\" halign=\"left\">arcs</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>benchmark</th>\n",
+       "      <th>platform</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">BK</th>\n",
+       "      <th>leonardo</th>\n",
+       "      <td>14414.0</td>\n",
+       "      <td>1.529236e+05</td>\n",
+       "      <td>6.145016e+06</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>1118.0</td>\n",
+       "      <td>688500002.0</td>\n",
+       "      <td>14414.0</td>\n",
+       "      <td>1.447010e+06</td>\n",
+       "      <td>4.277287e+07</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>254.0</td>\n",
+       "      <td>446.0</td>\n",
+       "      <td>2169.5</td>\n",
+       "      <td>4.673839e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pc</th>\n",
+       "      <td>8867.0</td>\n",
+       "      <td>1.394007e+04</td>\n",
+       "      <td>8.355467e+04</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1118.0</td>\n",
+       "      <td>3582362.0</td>\n",
+       "      <td>8867.0</td>\n",
+       "      <td>1.853157e+05</td>\n",
+       "      <td>9.839456e+05</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>434.0</td>\n",
+       "      <td>2220.0</td>\n",
+       "      <td>2.736172e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">EIBFS</th>\n",
+       "      <th>leonardo</th>\n",
+       "      <td>14115.0</td>\n",
+       "      <td>1.073615e+05</td>\n",
+       "      <td>2.233287e+06</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>1118.0</td>\n",
+       "      <td>134217730.0</td>\n",
+       "      <td>14115.0</td>\n",
+       "      <td>1.146492e+06</td>\n",
+       "      <td>1.792658e+07</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>440.0</td>\n",
+       "      <td>2170.0</td>\n",
+       "      <td>9.138902e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pc</th>\n",
+       "      <td>8865.0</td>\n",
+       "      <td>1.390601e+04</td>\n",
+       "      <td>8.353330e+04</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1118.0</td>\n",
+       "      <td>3582362.0</td>\n",
+       "      <td>8865.0</td>\n",
+       "      <td>1.851767e+05</td>\n",
+       "      <td>9.840131e+05</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>434.0</td>\n",
+       "      <td>2220.0</td>\n",
+       "      <td>2.736172e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">HPF</th>\n",
+       "      <th>leonardo</th>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>1.692281e+06</td>\n",
+       "      <td>8.425491e+06</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>25922.0</td>\n",
+       "      <td>185944.0</td>\n",
+       "      <td>312744.0</td>\n",
+       "      <td>134217730.0</td>\n",
+       "      <td>1300.0</td>\n",
+       "      <td>1.764177e+07</td>\n",
+       "      <td>6.690442e+07</td>\n",
+       "      <td>47872.0</td>\n",
+       "      <td>799377.0</td>\n",
+       "      <td>1483884.0</td>\n",
+       "      <td>5417409.0</td>\n",
+       "      <td>9.213112e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mbp19</th>\n",
+       "      <td>1092.0</td>\n",
+       "      <td>1.921566e+05</td>\n",
+       "      <td>3.479400e+05</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>21058.0</td>\n",
+       "      <td>166224.0</td>\n",
+       "      <td>192881.0</td>\n",
+       "      <td>3582362.0</td>\n",
+       "      <td>1092.0</td>\n",
+       "      <td>2.375309e+06</td>\n",
+       "      <td>3.334210e+06</td>\n",
+       "      <td>47872.0</td>\n",
+       "      <td>793632.0</td>\n",
+       "      <td>1220544.0</td>\n",
+       "      <td>2177425.0</td>\n",
+       "      <td>3.229542e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pc</th>\n",
+       "      <td>1107.0</td>\n",
+       "      <td>3.277558e+05</td>\n",
+       "      <td>1.285954e+06</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>21122.0</td>\n",
+       "      <td>166224.0</td>\n",
+       "      <td>205402.0</td>\n",
+       "      <td>15935886.0</td>\n",
+       "      <td>1107.0</td>\n",
+       "      <td>3.300272e+06</td>\n",
+       "      <td>9.131332e+06</td>\n",
+       "      <td>47872.0</td>\n",
+       "      <td>793849.0</td>\n",
+       "      <td>1230776.0</td>\n",
+       "      <td>2205290.0</td>\n",
+       "      <td>1.112226e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      nodes                                               \\\n",
+       "                      count          mean           std     min      25%   \n",
+       "benchmark platform                                                         \n",
+       "BK        leonardo  14414.0  1.529236e+05  6.145016e+06    40.0     86.0   \n",
+       "          pc         8867.0  1.394007e+04  8.355467e+04    40.0     68.0   \n",
+       "EIBFS     leonardo  14115.0  1.073615e+05  2.233287e+06    40.0     80.0   \n",
+       "          pc         8865.0  1.390601e+04  8.353330e+04    40.0     68.0   \n",
+       "HPF       leonardo   1300.0  1.692281e+06  8.425491e+06  2002.0  25922.0   \n",
+       "          mbp19      1092.0  1.921566e+05  3.479400e+05  2002.0  21058.0   \n",
+       "          pc         1107.0  3.277558e+05  1.285954e+06  2002.0  21122.0   \n",
+       "\n",
+       "                                                        arcs                \\\n",
+       "                         50%       75%          max    count          mean   \n",
+       "benchmark platform                                                           \n",
+       "BK        leonardo     222.0    1118.0  688500002.0  14414.0  1.447010e+06   \n",
+       "          pc            86.0    1118.0    3582362.0   8867.0  1.853157e+05   \n",
+       "EIBFS     leonardo     194.0    1118.0  134217730.0  14115.0  1.146492e+06   \n",
+       "          pc            86.0    1118.0    3582362.0   8865.0  1.851767e+05   \n",
+       "HPF       leonardo  185944.0  312744.0  134217730.0   1300.0  1.764177e+07   \n",
+       "          mbp19     166224.0  192881.0    3582362.0   1092.0  2.375309e+06   \n",
+       "          pc        166224.0  205402.0   15935886.0   1107.0  3.300272e+06   \n",
+       "\n",
+       "                                                                           \\\n",
+       "                             std      min       25%        50%        75%   \n",
+       "benchmark platform                                                          \n",
+       "BK        leonardo  4.277287e+07     76.0     254.0      446.0     2169.5   \n",
+       "          pc        9.839456e+05     76.0     200.0      434.0     2220.0   \n",
+       "EIBFS     leonardo  1.792658e+07     76.0     250.0      440.0     2170.0   \n",
+       "          pc        9.840131e+05     76.0     200.0      434.0     2220.0   \n",
+       "HPF       leonardo  6.690442e+07  47872.0  799377.0  1483884.0  5417409.0   \n",
+       "          mbp19     3.334210e+06  47872.0  793632.0  1220544.0  2177425.0   \n",
+       "          pc        9.131332e+06  47872.0  793849.0  1230776.0  2205290.0   \n",
+       "\n",
+       "                                  \n",
+       "                             max  \n",
+       "benchmark platform                \n",
+       "BK        leonardo  4.673839e+09  \n",
+       "          pc        2.736172e+07  \n",
+       "EIBFS     leonardo  9.138902e+08  \n",
+       "          pc        2.736172e+07  \n",
+       "HPF       leonardo  9.213112e+08  \n",
+       "          mbp19     3.229542e+07  \n",
+       "          pc        1.112226e+08  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_min_cut_nodes_arcs = df_min_cut_overview[['nodes','arcs','benchmark','platform']]\n",
+    "df_min_cut_nodes_arcs.groupby(['benchmark','platform']).describe()"
    ]
   },
   {
@@ -1353,6 +1628,14 @@
    "metadata": {},
    "source": [
     "* We could remove CO2eRate, since it is an attribute that basically varies depending on the current Carbon Intensity, so it is basically fixed throughout the benchmar runs. THe low correlation with all the other variables suggests exactly that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b7a544a-cd12-4e47-aec3-731130b5ed4c",
+   "metadata": {},
+   "source": [
+    "**TODO:** Remove the most frequent values (expecially instances with low number of nodes and arcs) to better see the distribution of these variables."
    ]
   },
   {
