--- a/notebooks/sustainable-hardware-dimensioning.ipynb
+++ b/notebooks/sustainable-hardware-dimensioning.ipynb
@@ -44,7 +44,7 @@
    "id": "10a91681-7e62-40a9-b6b8-8d641791d19b",
    "metadata": {},
    "source": [
-    "# Sustainable Hardware Dimensioning\n",
+    "# Sustainable Hardware Dimensioning (AIITI Exam)\n",
     "\n",
     "In this work, we explore the problem of finding the the best Hardware architecture and its Dimensioning for AI algorithms, while respecting constraints in terms of carbon emissions. An existing tool, named [HADA](https://www.sciencedirect.com/science/article/abs/pii/S0950705122005974) (HArdware Dimensioning of AI Algorithms)  has focused on the task of Hardware Dimensioning with constraints on budget, runtime and solution quality. We aim at extending this approach by also considering constraints on carbon emissions resulting from computations, and we name this problem Sustainable Hardware Dimensioning.\n",
     "\n",
